# nimble-server-lib

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
docs/: index.adoc
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  daemon.c  deps.toml  main.c
src/examples/include/nimble-daemon/: daemon.h  version.h
src/include/nimble-server/: circular_buffer.h  connection_quality.h  default_step.h  delayed_quality.h  errors.h  forced_step.h  game.h  game_state.h  local_parties.h  local_party.h  participant.h  participant_connection.h  participant_connections.h  participant_references.h  participants.h  req_connect.h  req_download_game_state.h  req_download_game_state_ack.h  req_join_game.h  req_participants.h  req_ping.h  req_step.h  serialized_game_state.h  server.h  transport_connection.h  update_quality.h
src/lib/: CMakeLists.txt  authoritative_steps.c  authoritative_steps.h  check_for_disconnects.c  check_for_disconnects.h  circular_buffer.c  connection_quality.c  default_step.c  delayed_quality.c  forced_step.c  game.c  game_state.c  incoming_predicted_steps.c  incoming_predicted_steps.h  local_parties.c  local_party.c  participant.c  participant_connection.c  participant_connections.c  participant_references.c  participants.c  req_connect.c  req_game_join.c  req_game_state.c  req_game_state_ack.c  req_ping.c  req_step.c  send_authoritative_steps.c  send_authoritative_steps.h  server.c  set_game_state.c  transport_connection.c  transport_connection_stats.c  transport_connection_stats.h  update_quality.c
src/tests/: CMakeLists.txt  main.c  test.c  utest.h
